--- a/src/app/footer/footer.component.less
+++ b/src/app/footer/footer.component.less
@@ -30,7 +30,7 @@
   }
 
   .copyright {
-    font-size: 12px;
+    font-size: 10px;
   }
 }
 
