--- a/src/app/mode-toggle/mode-toggle.component.less
+++ b/src/app/mode-toggle/mode-toggle.component.less
@@ -7,6 +7,7 @@
 .toggle-container {
   .display-flex();
   .align-items-center();
+  margin-right: 5px;
 }
 .switch {
   position: relative;
